--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,21 +7,139 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 1200px;
-            margin: 0 auto;
+            margin: 0;
             padding: 20px;
             background-color: #f0f0f0;
+            transition: background-color 0.3s, color 0.3s;
         }
+
+        body.dark-mode {
+            background-color: #1a1a1a;
+            color: #ffffff;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .panel {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        body.dark-mode .panel {
+            background: #2d2d2d;
+            color: #ffffff;
+        }
+
+        .battle-log {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #f5f5f5;
+            border-radius: 4px;
+            max-height: 200px;
+            overflow-y: auto;
+            font-family: monospace;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        body.dark-mode .battle-log {
+            background-color: #2d2d2d;
+            color: #ffffff;
+        }
+
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .theme-toggle:hover {
+            background-color: #45a049;
+        }
+
+        body.dark-mode .theme-toggle {
+            background-color: #666;
+        }
+
+        body.dark-mode .theme-toggle:hover {
+            background-color: #777;
+        }
+
+        body.dark-mode .character-card {
+            background: #3d3d3d;
+            color: #ffffff;
+        }
+
+        body.dark-mode .character-card:hover {
+            background: #4d4d4d;
+        }
+
+        body.dark-mode .character-card.selected {
+            border-color: #4CAF50;
+            background: #2d4d2d;
+        }
+
+        body.dark-mode .character-card.target {
+            border-color: #FF4444;
+            background: #4d2d2d;
+        }
+
+        body.dark-mode input,
+        body.dark-mode select {
+            background: #3d3d3d;
+            color: #ffffff;
+            border: 1px solid #555;
+        }
+
+        body.dark-mode button {
+            background-color: #666;
+        }
+
+        body.dark-mode button:hover {
+            background-color: #777;
+        }
+
+        body.dark-mode .remove-button {
+            background-color: #ff4444;
+        }
+
+        body.dark-mode .remove-button:hover {
+            background-color: #cc0000;
+        }
+
+        body.dark-mode .reset-button {
+            background-color: #FF9800;
+        }
+
+        body.dark-mode .reset-button:hover {
+            background-color: #F57C00;
+        }
+
+        body.dark-mode .edit-button {
+            background-color: #2196F3;
+        }
+
+        body.dark-mode .edit-button:hover {
+            background-color: #1976D2;
+        }
+
         .container {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 20px;
-        }
-        .panel {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .character-form {
             display: grid;
@@ -67,15 +185,6 @@
             grid-template-columns: 1fr 1fr;
             gap: 20px;
             margin-bottom: 20px;
-        }
-        .battle-log {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #f5f5f5;
-            border-radius: 4px;
-            max-height: 200px;
-            overflow-y: auto;
-            font-family: monospace;
         }
         .battle-log p {
             margin: 5px 0;
@@ -163,6 +272,7 @@
     </style>
 </head>
 <body>
+    <button class="theme-toggle" onclick="toggleDarkMode()">Cambiar Tema</button>
     <h1>Sistema de Combate RPG</h1>
     
     <div style="margin-bottom: 20px;">
@@ -703,6 +813,20 @@
                 console.error('Error al resetear la batalla:', error);
                 alert('Error al resetear la batalla');
             }
+        });
+
+        // Función para alternar el modo oscuro
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+            localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
+        }
+
+        // Cargar preferencia de tema al iniciar
+        document.addEventListener('DOMContentLoaded', () => {
+            if (localStorage.getItem('darkMode') === 'true') {
+                document.body.classList.add('dark-mode');
+            }
+            init();
         });
 
         // Inicialización
