--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -53,31 +53,6 @@
             color: #ffffff;
         }
 
-        .theme-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .theme-toggle:hover {
-            background-color: #45a049;
-        }
-
-        body.dark-mode .theme-toggle {
-            background-color: #666;
-        }
-
-        body.dark-mode .theme-toggle:hover {
-            background-color: #777;
-        }
-
         body.dark-mode .character-card {
             background: #3d3d3d;
             color: #ffffff;
@@ -317,10 +292,115 @@
             font-size: 1.5rem;
             margin: 0;
         }
+        .main-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: #222;
+            color: #fff;
+            z-index: 10000;
+            box-shadow: 0 2px 8px #0002;
+        }
+        .main-header nav {
+            display: flex;
+            justify-content: center;
+            gap: 2em;
+            padding: 1em 0;
+        }
+        .main-header a, .main-header .theme-toggle {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: color 0.2s, background 0.2s;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 0 0.5em;
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+        .main-header a:hover, .main-header .theme-toggle:hover {
+            color: #4CAF50;
+            background: none;
+        }
+        body.dark-mode .main-header a, body.dark-mode .main-header .theme-toggle {
+            color: #f0f0f0;
+        }
+        body.dark-mode .main-header a:hover, body.dark-mode .main-header .theme-toggle:hover {
+            color: #6fcf97;
+        }
+        body {
+            padding-top: 70px !important;
+        }
+        body.dark-mode .main-header {
+            background: #181818;
+            color: #f0f0f0;
+        }
+        body.dark-mode .main-header a {
+            color: #f0f0f0;
+        }
+        body.dark-mode .main-header a:hover {
+            color: #6fcf97;
+        }
+        .main-battle-btn {
+            font-size: 1.2em;
+            padding: 0.9em 2.2em;
+            border-radius: 12px;
+            background: linear-gradient(90deg, #43e97b 0%, #38f9d7 100%);
+            color: #222;
+            font-weight: bold;
+            border: none;
+            margin: 0 0.5em;
+            box-shadow: 0 2px 8px #0003;
+            transition: background 0.2s, transform 0.1s;
+            cursor: pointer;
+        }
+        .main-battle-btn:hover {
+            background: linear-gradient(90deg, #38f9d7 0%, #43e97b 100%);
+            transform: scale(1.05);
+        }
+        body.dark-mode .main-battle-btn {
+            background: linear-gradient(90deg, #232b23 0%, #38f9d7 100%);
+            color: #fff;
+        }
+        .main-battle-btn-sm {
+            font-size: 1em;
+            padding: 0.5em 1.2em;
+            border-radius: 10px;
+            background: linear-gradient(90deg, #43e97b 0%, #38f9d7 100%);
+            color: #222;
+            font-weight: bold;
+            border: none;
+            margin: 0.2em 0.2em 0.2em 0;
+            box-shadow: 0 2px 8px #0003;
+            transition: background 0.2s, transform 0.1s;
+            cursor: pointer;
+            display: inline-block;
+        }
+        .main-battle-btn-sm:hover {
+            background: linear-gradient(90deg, #38f9d7 0%, #43e97b 100%);
+            transform: scale(1.04);
+        }
+        body.dark-mode .main-battle-btn-sm {
+            background: linear-gradient(90deg, #232b23 0%, #38f9d7 100%);
+            color: #fff;
+        }
     </style>
 </head>
 <body>
-    <button class="theme-toggle" onclick="toggleDarkMode()">Cambiar Tema</button>
+    <header class="main-header">
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="pokemon.html">Pokédex</a>
+            <a href="battle.html">Combate Pokémon</a>
+            <a href="chrono-team.html">Selección de Equipos Chrono</a>
+            <a href="chrono-battle.html">Combate Chrono Trigger</a>
+            <button class="theme-toggle" onclick="toggleDarkMode()">Cambiar Tema</button>
+        </nav>
+    </header>
     <h1>Sistema de Combate RPG</h1>
     
     <div style="margin-bottom: 20px;">
@@ -335,7 +415,7 @@
                 <input type="number" id="maxHealth" placeholder="Salud Máxima" required>
                 <input type="number" id="attack" placeholder="Ataque" required>
                 <input type="number" id="defense" placeholder="Defensa" required>
-                <button type="submit">Crear Personaje</button>
+                <button type="submit" class="main-battle-btn">Crear Personaje</button>
             </form>
         </div>
 
@@ -347,9 +427,9 @@
         <div class="panel battle-panel">
             <h2>Batalla</h2>
             <div class="battle-controls">
-                <button id="startBattle">Iniciar Batalla</button>
-                <button id="processTurn" disabled>Procesar Turno</button>
-                <button id="resetBattle" class="reset-button">Resetear Batalla</button>
+                <button id="startBattle" class="main-battle-btn">Iniciar Batalla</button>
+                <button id="processTurn" class="main-battle-btn" disabled>Procesar Turno</button>
+                <button id="resetBattle" class="main-battle-btn">Resetear Batalla</button>
             </div>
             <div id="battleStatus" class="battle-status">Estado: Esperando inicio de batalla</div>
             <div class="team">
@@ -467,15 +547,15 @@
             let teamButtons = '';
             if (includeTeamButtons) {
                 teamButtons = `
-                    <button onclick="addToTeam1('${character.id}')">Añadir a Equipo 1</button>
-                    <button onclick="addToTeam2('${character.id}')">Añadir a Equipo 2</button>
-                    <button class="edit-button" onclick="openEditModal('${character.id}')">Editar</button>
-                    <button class="remove-button" onclick="deleteCharacter('${character.id}', '${character.name}')">Eliminar</button>
+                    <button class="main-battle-btn-sm" onclick="addToTeam1('${character.id}')">Añadir a Equipo 1</button>
+                    <button class="main-battle-btn-sm" onclick="addToTeam2('${character.id}')">Añadir a Equipo 2</button>
+                    <button class="main-battle-btn-sm" style="background:linear-gradient(90deg,#2196F3 0%,#38f9d7 100%);color:#fff;" onclick="openEditModal('${character.id}')">Editar</button>
+                    <button class="main-battle-btn-sm" style="background:linear-gradient(90deg,#ff4444 0%,#f44336 100%);color:#fff;" onclick="deleteCharacter('${character.id}', '${character.name}')">Eliminar</button>
                 `;
             } else {
                 teamButtons = `
-                    <button onclick="selectCharacter('${character.id}', ${teamNumber})">Seleccionar</button>
-                    <button class="remove-button" onclick="removeFromTeam(${teamNumber}, '${character.id}')">Eliminar del Equipo</button>
+                    <button class="main-battle-btn-sm" onclick="selectCharacter('${character.id}', ${teamNumber})">Seleccionar</button>
+                    <button class="main-battle-btn-sm" style="background:linear-gradient(90deg,#ff4444 0%,#f44336 100%);color:#fff;" onclick="removeFromTeam(${teamNumber}, '${character.id}')">Eliminar del Equipo</button>
                 `;
             }
 
