--- a/src/main/resources/public/pokemon.html
+++ b/src/main/resources/public/pokemon.html
@@ -25,10 +25,21 @@
             padding: 20px;
         }
 
+        /* Buscador fijo debajo del menú */
         .search-bar {
-            margin-bottom: 20px;
-            display: flex;
-            gap: 10px;
+            position: fixed;
+            top: 70px; /* Justo debajo del menú */
+            left: 0;
+            width: 100vw;
+            z-index: 200;
+            background: #181818;
+            padding: 16px 20px 12px 20px;
+            box-sizing: border-box;
+            border-bottom: 1px solid #333;
+        }
+        body:not(.dark-mode) .search-bar {
+            background: #f0f0f0;
+            border-bottom: 1px solid #ccc;
         }
 
         body.dark-mode .search-bar input {
@@ -51,10 +62,11 @@
             cursor: pointer;
             transition: transform 0.2s, background-color 0.3s, color 0.3s, border-color 0.3s;
             position: relative;
+            z-index: 10;
         }
         .pokemon-card:hover {
             transform: translateY(-5px);
-            z-index: 1001;
+            z-index: 11;
         }
         body.dark-mode .pokemon-card {
             background: #232323;
@@ -193,8 +205,9 @@
             width: 300px;
             background: white;
             padding: 20px;
+            margin-top: 70px;
             box-shadow: -2px 0 10px rgba(0,0,0,0.1);
-            z-index: 1000;
+            z-index: 300;
             display: flex;
             flex-direction: column;
             transition: background-color 0.3s, color 0.3s;
@@ -333,14 +346,31 @@
             background-color: #f44336;
         }
 
-        .battle-button {
-            background-color: #FF9800;
-            color: white;
-            padding: 10px 20px;
+        .main-battle-btn {
+            font-size: 1.2em;
+            padding: 0.9em 2.2em;
+            border-radius: 12px;
+            background: linear-gradient(90deg, #43e97b 0%, #38f9d7 100%);
+            color: #222;
+            font-weight: bold;
             border: none;
-            border-radius: 5px;
+            margin: 0 0.5em 0 0;
+            box-shadow: 0 2px 8px #0003;
+            transition: background 0.2s, transform 0.1s;
             cursor: pointer;
-            margin-top: 10px;
+        }
+        .main-battle-btn:hover {
+            background: linear-gradient(90deg, #38f9d7 0%, #43e97b 100%);
+            transform: scale(1.05);
+        }
+        body.dark-mode .main-battle-btn {
+            background: linear-gradient(90deg, #232b23 0%, #38f9d7 100%);
+            color: #fff;
+        }
+        .main-battle-btn:disabled {
+            background: linear-gradient(90deg, #888 0%, #999 100%);
+            cursor: not-allowed;
+            transform: none;
         }
 
         .main-content {
@@ -361,7 +391,7 @@
             width: 90%;
             max-height: 90vh;
             overflow-y: auto;
-            z-index: 2000;
+            z-index: 1000;
         }
         body.dark-mode .moves-modal {
             background: #232323;
@@ -393,6 +423,7 @@
         body.dark-mode .move-item.selected, body.dark-mode .move-item:hover {
             background: #294d29;
             border-color: #6fcf97;
+            color: #fff;
         }
 
         .move-item .move-name {
@@ -532,68 +563,6 @@
             display: block;
         }
 
-        .theme-toggle {
-            margin-right: 10px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .theme-toggle:hover {
-            background-color: #45a049;
-        }
-        body.dark-mode .theme-toggle {
-            background-color: #666;
-        }
-        body.dark-mode .theme-toggle:hover {
-            background-color: #777;
-        }
-
-        body.dark-mode .selected-move-item {
-            background: #181818;
-            color: #f0f0f0;
-            border-color: #444;
-        }
-        body.dark-mode .selected-move-item .move-type,
-        body.dark-mode .selected-move-item .move-category {
-            background: #333 !important;
-            color: #f0f0f0 !important;
-            border: none;
-        }
-        body.dark-mode .selected-move-item .move-power {
-            background: #232323;
-            color: #b0e0ff;
-        }
-
-        .stat-input-group {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .stat-input-group label {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5px 0;
-        }
-
-        .stat-input-group input {
-            width: 60px;
-            padding: 4px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-
-        body.dark-mode .stat-input-group input {
-            background: #232323;
-            color: #f0f0f0;
-            border-color: #444;
-        }
-
         .config-section {
             margin-bottom: 20px;
             padding: 15px;
@@ -677,10 +646,10 @@
         }
 
         .stats-display {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
-            margin: 10px 0;
+            display: grid !important;
+            grid-template-columns: 1fr 1fr !important;
+            gap: 10px !important;
+            margin: 10px 0 !important;
         }
 
         .stat-display {
@@ -873,12 +842,124 @@
         body.dark-mode .description-text {
             color: #bbb;
         }
+
+        .main-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 70px; /* Altura fija del menú */
+            background: #222;
+            color: #fff;
+            z-index: 100;
+            box-shadow: 0 2px 8px #0002;
+        }
+        .main-header nav {
+            display: flex;
+            justify-content: center;
+            gap: 2em;
+            padding: 1em 0;
+        }
+        .main-header a, .main-header .theme-toggle {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: color 0.2s, background 0.2s;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 0 0.5em;
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+        .main-header a:hover, .main-header .theme-toggle:hover {
+            color: #4CAF50;
+            background: none;
+        }
+        body.dark-mode .main-header a, body.dark-mode .main-header .theme-toggle {
+            color: #f0f0f0;
+        }
+        body.dark-mode .main-header a:hover, body.dark-mode .main-header .theme-toggle:hover {
+            color: #6fcf97;
+        }
+        body {
+            padding-top: 70px !important;
+        }
+        /* Ajusta el contenido para que no quede debajo del buscador */
+        .container.main-content {
+            padding-top: 120px !important; /* 70px menú + 50px buscador */
+        }
+
+        /* Agrupación de inputs de estadísticas */
+        .stat-input-group {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .stat-input-group label {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 14px;
+            margin-bottom: 0;
+        }
+        .stat-input-group input[type="number"] {
+            width: 60px;
+            padding: 4px 6px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+        }
+        body.dark-mode .stat-input-group input[type="number"] {
+            background: #232323;
+            color: #f0f0f0;
+            border-color: #444;
+        }
+
+        /* Mejoras de contraste para movimientos en modo oscuro */
+        body.dark-mode .move-item {
+            background: #232323;
+            color: #f0f0f0;
+            border-color: #444;
+        }
+        body.dark-mode .move-item.selected, 
+        body.dark-mode .move-item:hover {
+            background: #294d29;
+            border-color: #6fcf97;
+            color: #fff;
+        }
+        body.dark-mode .selected-move-item {
+            background: #232323;
+            color: #f0f0f0;
+            border: 1px solid #6fcf97;
+        }
+        body.dark-mode .selected-move-item .move-name {
+            color: #fff;
+        }
+        body.dark-mode .selected-move-item .move-details {
+            color: #fff;
+        }
+        /* Mejorar contraste de badges de tipo y categoría en modo oscuro */
+        body.dark-mode .move-type,
+        body.dark-mode .move-category {
+            border: 1px solid #fff;
+            text-shadow: 0 1px 2px #000a;
+        }
     </style>
 </head>
 <body>
-    <div style="margin-bottom: 20px; display: flex; gap: 10px; align-items: center;">
-        <button class="theme-toggle" onclick="toggleDarkMode()">Cambiar Tema</button>
-    </div>
+    <header class="main-header">
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="pokemon.html">Pokédex</a>
+            <a href="battle.html">Combate Pokémon</a>
+            <a href="chrono-team.html">Selección de Equipos Chrono</a>
+            <a href="chrono-battle.html">Combate Chrono Trigger</a>
+            <button class="theme-toggle" onclick="toggleDarkMode()">Cambiar Tema</button>
+        </nav>
+    </header>
     <div class="container main-content">
         <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Buscar Pokémon por nombre">
@@ -896,8 +977,8 @@
                 <button onclick="editTeamName()" title="Cambiar nombre"><i class="fa-solid fa-pen"></i></button>
                 <button class="delete" onclick="deleteCurrentTeam()" title="Eliminar equipo"><i class="fa-solid fa-trash"></i></button>
         </div>
-            <button class="battle-button" onclick="startBattle()">Iniciar Batalla</button>
-            <button class="clear-team" onclick="clearTeam()">Limpiar Equipo</button>
+            <button class="main-battle-btn" onclick="startBattle()">Iniciar Batalla</button>
+            <button class="main-battle-btn" onclick="clearTeam()">Limpiar Equipo</button>
         </div>
         <div class="team-grid" id="teamGrid">
             <!-- Los slots del equipo se generarán dinámicamente -->
@@ -976,30 +1057,12 @@
             <div class="stats-calculated-section">
                 <h4 style="margin-top: 0;">Estadísticas Calculadas</h4>
                 <div id="calculatedStats" class="stats-display">
-                    <div class="stat-display">
-                        <span>HP:</span>
-                        <span id="calcHP">0</span>
-                    </div>
-                    <div class="stat-display">
-                        <span>Ataque:</span>
-                        <span id="calcAttack">0</span>
-                    </div>
-                    <div class="stat-display">
-                        <span>Defensa:</span>
-                        <span id="calcDefense">0</span>
-                    </div>
-                    <div class="stat-display">
-                        <span>Ataque Especial:</span>
-                        <span id="calcSpecialAttack">0</span>
-                    </div>
-                    <div class="stat-display">
-                        <span>Defensa Especial:</span>
-                        <span id="calcSpecialDefense">0</span>
-                    </div>
-                    <div class="stat-display">
-                        <span>Velocidad:</span>
-                        <span id="calcSpeed">0</span>
-                    </div>
+                    <div class="stat-display"><span>HP:</span><span id="calcHP">0</span></div>
+                    <div class="stat-display"><span>Ataque:</span><span id="calcAttack">0</span></div>
+                    <div class="stat-display"><span>Defensa:</span><span id="calcDefense">0</span></div>
+                    <div class="stat-display"><span>Ataque Especial:</span><span id="calcSpecialAttack">0</span></div>
+                    <div class="stat-display"><span>Defensa Especial:</span><span id="calcSpecialDefense">0</span></div>
+                    <div class="stat-display"><span>Velocidad:</span><span id="calcSpeed">0</span></div>
                 </div>
             </div>
             
@@ -1970,30 +2033,12 @@
                             <div class="stats-calculated-section">
                                 <h4 style="margin-top: 0;">Estadísticas Calculadas</h4>
                                 <div id="calculatedStats" class="stats-display">
-                                    <div class="stat-display">
-                                        <span>HP:</span>
-                                        <span id="calcHP">0</span>
-                                    </div>
-                                    <div class="stat-display">
-                                        <span>Ataque:</span>
-                                        <span id="calcAttack">0</span>
-                                    </div>
-                                    <div class="stat-display">
-                                        <span>Defensa:</span>
-                                        <span id="calcDefense">0</span>
-                                    </div>
-                                    <div class="stat-display">
-                                        <span>Ataque Especial:</span>
-                                        <span id="calcSpecialAttack">0</span>
-                                    </div>
-                                    <div class="stat-display">
-                                        <span>Defensa Especial:</span>
-                                        <span id="calcSpecialDefense">0</span>
-                                    </div>
-                                    <div class="stat-display">
-                                        <span>Velocidad:</span>
-                                        <span id="calcSpeed">0</span>
-                                    </div>
+                                    <div class="stat-display"><span>HP:</span><span id="calcHP">0</span></div>
+                                    <div class="stat-display"><span>Ataque:</span><span id="calcAttack">0</span></div>
+                                    <div class="stat-display"><span>Defensa:</span><span id="calcDefense">0</span></div>
+                                    <div class="stat-display"><span>Ataque Especial:</span><span id="calcSpecialAttack">0</span></div>
+                                    <div class="stat-display"><span>Defensa Especial:</span><span id="calcSpecialDefense">0</span></div>
+                                    <div class="stat-display"><span>Velocidad:</span><span id="calcSpeed">0</span></div>
                                 </div>
                             </div>
                         </div>
